# typify

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index-2769eea05f6a2957.css  index.html  shell.nix  tailwind.config.js  typify-e93488861dbb7228.js  typify-e93488861dbb7228_bg.wasm
.github/workflows/: rust.yml
assets/: site.webmanifest
src/: main.rs  router.rs  theme.rs
src/components/: home.rs  lyrics.rs  mod.rs  nav_bar.rs  not_found.rs  now_playing.rs  typing.rs
src/types/: mod.rs
src/utils/: error.rs  fetch.rs  local.rs  lyrics.rs  mod.rs
