[package]
name = "typify"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.5"
gloo-timers = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
wasm-bindgen-futures = "0.4"
yew = { version = "0.21.0", features = ["csr"]}
weblog = "0.3.0"
wasm-bindgen = "0.2.92"
yew-router = "0.18.0"
comrak = "0.30.0"
gloo-utils = "0.2.0"
slug = "0.1.6"
rspotify = "0.13.3"
wasm-logger = "0.2.0"
log = "0.4.22"
getrandom = "0.2.15"
yew-hooks = "0.3.3"


# yew_icons = { version = "0.8", features = [ "SiRust", "BiCodeBlock", "SiCplusplus", "SiPython" ] }


[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "History",
  "Element",
  "Document",
  "DomTokenList",
  "MediaQueryList"
]
